# fsh

./: README.md
fsh/: README.md  __init__.py  main.py  pyproject.toml
fsh/fsh/: __init__.py  fsh.py
fsh/fsh.egg-info/: PKG-INFO  SOURCES.txt
fsh/fsh/addons/: __init__.py  preprocess.py  std_callbacks.py
fsh/fsh/errors/: __init__.py  errors.py
fsh/fsh/main_addons/: std_metrics.py
fsh/fsh/models/: Linear.py  __init__.py
fsh/main_addons/: __init__.py  std_metrics.py
fsh/models/: Linear.py
